# cargo-rust

sqlx编译成动态库并由第三方程序执行/: 流程记录
sqlx编译成动态库并由第三方程序执行/源码记录/rust_sqlxDiy_kes_test/: .env  Cargo.toml  build.rs
sqlx编译成动态库并由第三方程序执行/源码记录/rust_sqlxDiy_kes_test/src/: main.rs
